# Multi_DedFinder

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/data/: cache.rs  esi_activity.rs  mod.rs  route_history.rs  sde.rs
src/esi/: auth.rs  location.rs  mod.rs  waypoint.rs
src/graph/: highsec_graph.rs  mod.rs  pathfinding.rs
src/model/: mod.rs  route.rs  score.rs  system.rs
src/output/: json.rs  mod.rs  text.rs
src/routing/: candidate_filter.rs  config_resolution.rs  generator.rs  mod.rs  route_modes.rs  scorer.rs
tests/: cli_workflow.rs  route_generation.rs
tests/common/: mod.rs
tests/fixtures/dense_quiet_vs_busy_cluster/: activity.csv  stargates.csv  systems.csv
tests/fixtures/isolated_start/: activity.csv  stargates.csv  systems.csv
tests/fixtures/linear_highsec_chain/: activity.csv  stargates.csv  systems.csv
tests/fixtures/lowsec_shortcut/: activity.csv  stargates.csv  systems.csv
tests/fixtures/quiet_dead_end_cluster/: activity.csv  stargates.csv  systems.csv
tests/fixtures/sde/: regions_small.csv  stargates_small.csv  stargates_with_missing_endpoint.csv  systems_small.csv  systems_with_missing_edge.csv
