[package]
name = "eve-ded-route"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eve-ded-route"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
petgraph = "0.6"
csv = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.89"
url = "2.5.8"
base64 = "0.22.1"
dirs = "6.0.0"
